fix flex alignment of items and better fit in mobile viewport

--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -8,9 +8,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
-
 }
 
 .challengeNotActive{
@@ -109,6 +108,7 @@
 
 @media(max-width: 800px){
     .challengeBoxContainer{
-        margin-bottom: 5rem;
+        min-height: 400px;
     }
 }
+
