--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -1,10 +1,11 @@
 .container{
     height: 100vh;
     max-width: 1240px;
-    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .container .mainSection {
@@ -14,11 +15,6 @@
     gap: 6.25rem;
     align-content: center;
     margin-top: 8rem;
-}
-
-.container .mainSection .countdownArticle,
-.container .mainSection .challengeArticle{
-    min-width: 350px;
 }
 
 .pageContent{
@@ -58,17 +54,41 @@
     height: 100%;
 }
 
-@media(max-width: 800px){
+/* .container .mainSection .countdownArticle,
+.container .mainSection .countdownArticle button,
+.container .mainSection .challengeArticle{
+    min-width: 350px;
+} */
+
+@media(max-width: 870px){
+
     .container .mainSection {
-        flex: 1;
+        flex: 0 0 350px;
         display: grid;
-        grid-template-columns: 1fr;
-        gap: 2rem;
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+        justify-content: center;
         align-content: center;
         margin-top: 5rem;
-    }  
-
-    .divR{
-        margin-bottom: 2rem;
     }
+
+}
+
+@media(max-width: 800px){
+    .container{
+        height: 1150px;        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container .mainSection {
+        width: 400px;
+        flex: 0;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 3rem;
+        
+    }
+
 }
